apps/changedetection/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`change.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`change.${DOMAIN}`)
      kind: Rule
      services:
        - name: changedetection
          port: 5000
      middlewares:
        - name: authentik
          namespace: traefik
